# cpp_projects

./: LICENSE  README.md
courses/: array.cpp  chars.cpp  chars_and_string.cpp  objects.cpp  param_by_references.cpp  param_by_references_struct.cpp  pointer.cpp
courses/oop/: property_pointer.cpp  readme.md  test.cpp
courses/oop/virtual/: virtual.cpp  virtual1.cpp
courses/pointers/: pointer1.cpp  readme.md
courses/struct/: readme.md  struct.cpp
courses/variable/: readme.md  variable.cpp
link_static_library/: README.md  win_build.bat
link_static_library/libs/mylibA/: mylibA.h  win_clean.bat
link_static_library/libs/mylibB/: win_build.bat  win_clean.bat
link_static_library/src/: win_build.bat  win_clean.bat
link_static_library_cmake/: CMakeLists.txt  README.md
link_static_library_cmake/libs/mylibA/: mylibA.cpp
link_static_library_cmake/libs/mylibB/: mylibB.h
link_static_library_manually/: README.md  win_clean.bat
link_static_library_manually/libs/mylibA/: win_build.bat
link_static_library_manually/libs/mylibB/: mylibB.cpp
link_static_library_manually/src/: main.cpp
tictactoe_console/: CMakeLists.txt  ConsoleController.cpp  GameController.cpp  README.md
tictactoe_console/src/: ConsoleController.cpp  GameController.cpp  keyboard.cpp  log.cpp  main.cpp
